# ModelConverter

./: CMakeLists.txt  ModelConvertConsole.cpp  configs.cpp  configs.h  configsdialog.cpp  configsdialog.h  configsdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh.cpp  mesh.h  model.cpp  model.h
assimp/: CMakeCache.txt  CMakeSettings.json  cmake_install.cmake  cmake_uninstall.cmake  revision.h
assimp/code/: cmake_install.cmake
assimp/contrib/zlib/: CTestTestfile.cmake  cmake_install.cmake
assimp/samples/SimpleTexturedDirectx11/SimpleTexturedDirectx11/: Mesh.h  ModelLoader.cpp  ModelLoader.h  logi.h  main.cpp
assimp/test/: cmake_install.cmake
assimp/test/headercheck/: cmake_install.cmake
